Fix alignment

--- a/styles/About.scss
+++ b/styles/About.scss
@@ -5,7 +5,7 @@
     width: 68%;
     padding: 20px 5%;
 
-    > h2 {
+    >h2 {
         font-weight: 700;
         font-style: Bold;
         font-size: 35px;
@@ -14,7 +14,7 @@
         color: #1A2631;
     }
 
-    > div {
+    >div {
         display: flex;
         flex-direction: column;
         gap: 10px;
@@ -26,7 +26,7 @@
         color: #1A2631;
     }
 
-    > button {
+    >button {
         width: 300px;
         height: 50px;
         padding: 10px;
@@ -42,8 +42,8 @@
         letter-spacing: 0%;
 
         &:hover {
-            background: linear-gradient(113.35deg, #2c3e5000 -25.4%, #A7FFFB 91.66%);
-            color: #1A2631;
+            background: #3d7292b2, ;
+            border: 1px solid #3AAFA9;
         }
     }
 }
@@ -52,15 +52,15 @@
     .about {
         width: 85%;
 
-        > h2 {
+        >h2 {
             font-size: 30px;
         }
 
-        > div {
+        >div {
             font-size: 13px;
         }
 
-        > button {
+        >button {
             width: 250px;
             height: 48px;
             font-size: 15px;
@@ -73,16 +73,16 @@
         width: 90%;
         padding: 15px 5%;
 
-        > h2 {
+        >h2 {
             font-size: 26px;
         }
 
-        > div {
+        >div {
             font-size: 13px;
             line-height: 140%;
         }
 
-        > button {
+        >button {
             width: 220px;
             height: 45px;
         }
@@ -94,16 +94,16 @@
         width: 100%;
         padding: 10px 4%;
 
-        > h2 {
+        >h2 {
             font-size: 22px;
         }
 
-        > div {
+        >div {
             font-size: 12px;
             line-height: 150%;
         }
 
-        > button {
+        >button {
             width: 100%;
             height: 45px;
             font-size: 15px;
