--- a/styles/VideoCard.scss
+++ b/styles/VideoCard.scss
@@ -110,7 +110,7 @@
 }
 
 .light {
-    background: #FFFCF1;
+    background: #F4F5F7;
     color: #1A2631;
 }
 
